# iddns

./: CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  config.example  iddns.sh
.github/workflows/: build.yaml  release.yaml
src/: lib.rs  main.rs
