[package]
name = "iddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
exitcode = "1.1.2"
reqwest = { version = "0.11.13" }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
