[package]
name = "iddns"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Hedger <nicolas@hedger.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
thiserror = "1.0.40"
clap = { version = "4.2.4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
